--- a/chat-examples-swift.xcodeproj/xcshareddata/xcschemes/ResourceCenterDemo.xcscheme
+++ b/chat-examples-swift.xcodeproj/xcshareddata/xcschemes/ResourceCenterDemo.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "3552578122394A910095AAFD"
-               BuildableName = "PlaygroundSupport.framework"
-               BlueprintName = "PlaygroundSupport"
+               BlueprintIdentifier = "3552571A223852930095AAFD"
+               BuildableName = "RCDemo.app"
+               BlueprintName = "RCDemo"
                ReferencedContainer = "container:chat-examples-swift.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -26,9 +26,39 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "3552571A223852930095AAFD"
+            BuildableName = "RCDemo.app"
+            BlueprintName = "RCDemo"
+            ReferencedContainer = "container:chat-examples-swift.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "3552572D223852970095AAFD"
+               BuildableName = "RCDemoTests.xctest"
+               BlueprintName = "RCDemoTests"
+               ReferencedContainer = "container:chat-examples-swift.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "3552571A223852930095AAFD"
+            BuildableName = "RCDemo.app"
+            BlueprintName = "RCDemo"
+            ReferencedContainer = "container:chat-examples-swift.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -42,15 +72,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3552578122394A910095AAFD"
-            BuildableName = "PlaygroundSupport.framework"
-            BlueprintName = "PlaygroundSupport"
+            BlueprintIdentifier = "3552571A223852930095AAFD"
+            BuildableName = "RCDemo.app"
+            BlueprintName = "RCDemo"
             ReferencedContainer = "container:chat-examples-swift.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -60,15 +91,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3552578122394A910095AAFD"
-            BuildableName = "PlaygroundSupport.framework"
-            BlueprintName = "PlaygroundSupport"
+            BlueprintIdentifier = "3552571A223852930095AAFD"
+            BuildableName = "RCDemo.app"
+            BlueprintName = "RCDemo"
             ReferencedContainer = "container:chat-examples-swift.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
