--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@ language:
   - swift
 osx_image: xcode10.1
 os: osx
-sudo: true
+sudo: false
+env:
+  global:
+    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
 cache:
   - bundler
 rvm:
