[CHAT-722] Configure your Publish/Subscribe keys
Keys should not be stored inside Github

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@
 build/
 DerivedData/
 
+## Config files containing secret keys
+RCDemo.debug.xcconfig
+RCDemo.release.xcconfig
+
 ## Various settings
 *.pbxuser
 !default.pbxuser
