--- a/Examples/ResourceCenterDemo/Info.plist
+++ b/Examples/ResourceCenterDemo/Info.plist
@@ -2,6 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>PubNub</key>
+	<dict>
+		<key>SubKey</key>
+		<string>$(RCDEMO_SUBSCRIBE_KEY)</string>
+		<key>PubKey</key>
+		<string>$(RCDEMO_PUBLISH_KEY)</string>
+	</dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
