--- a/chat-examples-swift.xcodeproj/xcshareddata/xcschemes/ResourceCenterDemo.xcscheme
+++ b/chat-examples-swift.xcodeproj/xcshareddata/xcschemes/ResourceCenterDemo.xcscheme
@@ -1,10 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1010"
-   version = "1.3">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
+      <PreActions>
+         <ExecutionAction
+            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
+            <ActionContent
+               title = "Run Script"
+               scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;source ~/.bash_profile&#10;ruby ${PROJECT_DIR}/generate_xcconfigs.rb&#10;">
+               <EnvironmentBuildable>
+                  <BuildableReference
+                     BuildableIdentifier = "primary"
+                     BlueprintIdentifier = "3552571A223852930095AAFD"
+                     BuildableName = "RCDemo.app"
+                     BlueprintName = "RCDemo"
+                     ReferencedContainer = "container:chat-examples-swift.xcodeproj">
+                  </BuildableReference>
+               </EnvironmentBuildable>
+            </ActionContent>
+         </ExecutionAction>
+      </PreActions>
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
