--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,46 @@
-language:
-  - swift
+language: swift
 osx_image: xcode10.2
 os: osx
 sudo: true
+cache: bundler
+
 env:
   global:
     - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
-cache:
-  - bundler
 rvm:
   - 2.5.3
-before_install:
-  - gem install bundler
-  - brew install node
-install:
-  - bundle install
-  - npm config set strict-ssl false
-  - npm install chalk fancy-log simple-git
-matrix:
+
+stages:
+  - examples
+  - snippets
+  - name: submodule
+    if: branch = master AND (type IN (api, cron, push))
+
+jobs:
   include:
-    - env: LANE='lint_and_test_snippets' SOURCE_DIR='Snippets'
-    - env: LANE='lint_and_test_examples' SOURCE_DIR='Examples'
-before_script:
-  - git config --global user.name "${GH_NAME}"
-  - git config --global user.email "${GH_EMAIL}"
-  - echo "machine github.com login ${GH_NAME} password ${GH_TOKEN}"  > ~/.netrc
-script:
-  bundle exec fastlane "${LANE}" source_dir:"${SOURCE_DIR}" kickoff_reason:"${TRAVIS_EVENT_TYPE}" travis_token:"${TRAVIS_API_TOKEN}"
-after_success:
-  - node .travis.docs.js
+    - stage: examples
+      name: "Integration tests"
+      env: LANE='lint_and_test_examples' SOURCE_DIR='Examples'
+      before_install: gem install bundler
+      install: bundle install
+      script: bundle exec fastlane "${LANE}" source_dir:"${SOURCE_DIR}" kickoff_reason:"${TRAVIS_EVENT_TYPE}" travis_token:"${TRAVIS_API_TOKEN}"
+      
+    - stage: snippets
+      name: "Integration tests"
+      env: LANE='lint_and_test_snippets' SOURCE_DIR='Snippets'
+      before_install: gem install bundler
+      install: bundle install
+      script: bundle exec fastlane "${LANE}" source_dir:"${SOURCE_DIR}" kickoff_reason:"${TRAVIS_EVENT_TYPE}" travis_token:"${TRAVIS_API_TOKEN}"
+
+    - stage: submodule
+      name: "Update reference"
+      before_install: gem install bundler && gem install node
+      install: 
+        - bundle install
+        - npm config set strict-ssl false
+        - npm install chalk fancy-log simple-git
+      before_script:
+        - git config --global user.name "${GH_NAME}"
+        - git config --global user.email "${GH_EMAIL}"
+        - echo "machine github.com login ${GH_NAME} password ${GH_TOKEN}"  > ~/.netrc
+      script: node .travis.docs.js
