chore(swift): update node.js installation
Add check of node formula installed (upgrade if so) or not (install node then).

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ jobs:
       name: "Update reference"
       before_install: brew update
       install: 
-        - brew install node
+        - brew ls --versions node && brew upgrade node || brew install node
         - npm config set strict-ssl false
         - npm install chalk fancy-log simple-git
       before_script:
