--- a/chat-examples-swift.xcodeproj/xcshareddata/xcschemes/ResourceCenterDemo.xcscheme
+++ b/chat-examples-swift.xcodeproj/xcshareddata/xcschemes/ResourceCenterDemo.xcscheme
@@ -88,6 +88,8 @@
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
+      stopOnEveryThreadSanitizerIssue = "YES"
+      stopOnEveryMainThreadCheckerIssue = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
       <BuildableProductRunnable
