--- a/chat-examples-swift.xcodeproj/xcshareddata/xcschemes/AnimalForestChat.xcscheme
+++ b/chat-examples-swift.xcodeproj/xcshareddata/xcschemes/AnimalForestChat.xcscheme
@@ -45,6 +45,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      systemAttachmentLifetime = "keepNever"
       codeCoverageEnabled = "YES"
       onlyGenerateCoverageForSpecifiedTargets = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
