Better exposing listener events from behind protocol abstraction

--- a/chat-examples-swift.xcodeproj/xcshareddata/xcschemes/Snippets.xcscheme
+++ b/chat-examples-swift.xcodeproj/xcshareddata/xcschemes/Snippets.xcscheme
@@ -56,6 +56,11 @@
                BlueprintName = "Snippets"
                ReferencedContainer = "container:chat-examples-swift.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "ConnectToPubnub/testDisconnectFromPubNub()">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
       <AdditionalOptions>
